--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,8 +2,14 @@ require:
   - rubocop-rails
   - rubocop-rspec
 
+Metrics/MethodLength:
+  Max: 15
+  
 Style/Documentation:
   Enabled: false
-  
+
 RSpec/ExampleLength:
   Max: 8
+
+RSpec/AnyInstance:
+  Enabled: false
